# p1_pulkis

./: .gitignore  Makefile  README.md  dashboard.json  grafana.sh
app_code/: .gitignore  README.md  settings.gradle.kts
app_code/app/: build.gradle.kts
app_code/gradle/: libs.versions.toml
app_code/gradle/wrapper/: gradle-wrapper.properties
certbot/: certbot_renew.sh  init-letsencrypt.sh  prod-cert-letsncrypt.sh  test_renew.sh
certbot/conf/: .gitignore
configs/mosquitto/: install.sh  mosquitto.conf
configs/nginx/: grafana.conf  mqtt.conf  nginx.conf  prod.conf
configs/telegraf/: telegraf.conf
dockerfile/grafana/: Dockerfile
dockerfile/influxdb/: Dockerfile
dockerfile/mosquitto/: Dockerfile
dockerfile/nginx/: Dockerfile
dockerfile/postgres/: dump.sh
dockerfile/telegraf/: Dockerfile
embed_code/: .gitignore  Makefile  README.md  data_style
embed_code/main/: CMakeLists.txt  Kconfig.projbuild  component.mk  connect.c  do_the_thing.c  ft_strchr.c  ft_strlcpy.c  ft_strlen.c  ft_strnstr.c  ft_strrchr.c  main.c
embed_code/main/include/: data_reader.h  data_sender.h  do_the_thing.h  info.h  libft.h  mqtt.h  tcp_server.h  wifi.h
embed_code/old_c/: main.c  mqtt.c  old_main.c  read_data.c  send_data.c  tcp_server.c  web_server.c
root-ca/: test.sh
server_code/: Makefile  README.md  docker-compose.yaml
server_code/certbot/: README.md  prod-cert-letsncrypt.sh  stage-cert-letsncrypt.sh
server_code/configs/mosquitto/: mosquitto.conf
server_code/configs/nginx/: healthcheck.sh
server_code/configs/telegraf/: telegraf.conf
(+16 files in other folders)
